@@ -19,7 +19,18 @@ package org.apache.lucene.benchmark.jmh;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.TimeUnit;
 import org.apache.lucene.util.VectorUtil;
-import org.openjdk.jmh.annotations.*;
+import org.openjdk.jmh.annotations.Benchmark;
+import org.openjdk.jmh.annotations.BenchmarkMode;
+import org.openjdk.jmh.annotations.Fork;
+import org.openjdk.jmh.annotations.Level;
+import org.openjdk.jmh.annotations.Measurement;
+import org.openjdk.jmh.annotations.Mode;
+import org.openjdk.jmh.annotations.OutputTimeUnit;
+import org.openjdk.jmh.annotations.Param;
+import org.openjdk.jmh.annotations.Scope;
+import org.openjdk.jmh.annotations.Setup;
+import org.openjdk.jmh.annotations.State;
+import org.openjdk.jmh.annotations.Warmup;
 
 @BenchmarkMode(Mode.Throughput)
 @OutputTimeUnit(TimeUnit.MICROSECONDS)
@@ -33,11 +44,21 @@ import org.openjdk.jmh.annotations.*;
     value = 3,
     jvmArgsAppend = {"-Xmx2g", "-Xms2g", "-XX:+AlwaysPreTouch"})
 public class VectorUtilBenchmark {
+  static void compressBytes(byte[] raw, byte[] compressed) {
+    for (int i = 0; i < compressed.length; ++i) {
+      int v = (raw[i] << 4) | raw[compressed.length + i];
+      compressed[i] = (byte) v;
+    }
+  }
 
   private byte[] bytesA;
   private byte[] bytesB;
+  private byte[] halfBytesA;
+  private byte[] halfBytesB;
+  private byte[] halfBytesBPacked;
   private float[] floatsA;
   private float[] floatsB;
+  private int expectedhalfByteDotProduct;
 
   @Param({"1", "128", "207", "256", "300", "512", "702", "1024"})
   int size;
@@ -51,6 +72,21 @@ public class VectorUtilBenchmark {
     bytesB = new byte[size];
     random.nextBytes(bytesA);
     random.nextBytes(bytesB);
+    // random half byte arrays for binary methods
+    // this means that all values must be between 0 and 15
+    expectedhalfByteDotProduct = 0;
+    halfBytesA = new byte[size];
+    halfBytesB = new byte[size];
+    for (int i = 0; i < size; ++i) {
+      halfBytesA[i] = (byte) random.nextInt(16);
+      halfBytesB[i] = (byte) random.nextInt(16);
+      expectedhalfByteDotProduct += halfBytesA[i] * halfBytesB[i];
+    }
+    // pack the half byte arrays
+    if (size % 2 == 0) {
+      halfBytesBPacked = new byte[(size + 1) >> 1];
+      compressBytes(halfBytesB, halfBytesBPacked);
+    }
 
     // random float arrays for float methods
     floatsA = new float[size];
@@ -95,8 +131,49 @@ public class VectorUtilBenchmark {
   }
 
   @Benchmark
+  public int binaryHalfByteScalar() {
+    return VectorUtil.int4DotProduct(halfBytesA, halfBytesB);
+  }
+
+  @Benchmark
+  @Fork(jvmArgsPrepend = {"--add-modules=jdk.incubator.vector"})
+  public int binaryHalfByteVector() {
+    return VectorUtil.int4DotProduct(halfBytesA, halfBytesB);
+  }
+
+  @Benchmark
+  public int binaryHalfByteScalarPacked() {
+    if (size % 2 != 0) {
+      throw new RuntimeException("Size must be even for this benchmark");
+    }
+    int v = VectorUtil.int4DotProductPacked(halfBytesA, halfBytesBPacked);
+    if (v != expectedhalfByteDotProduct) {
+      throw new RuntimeException("Expected " + expectedhalfByteDotProduct + " but got " + v);
+    }
+    return v;
+  }
+
+  @Benchmark
+  @Fork(jvmArgsPrepend = {"--add-modules=jdk.incubator.vector"})
+  public int binaryHalfByteVectorPacked() {
+    if (size % 2 != 0) {
+      throw new RuntimeException("Size must be even for this benchmark");
+    }
+    int v = VectorUtil.int4DotProductPacked(halfBytesA, halfBytesBPacked);
+    if (v != expectedhalfByteDotProduct) {
+      throw new RuntimeException("Expected " + expectedhalfByteDotProduct + " but got " + v);
+    }
+    return v;
+  }
+
+  @Benchmark
   public float floatCosineScalar() {
     return VectorUtil.cosine(floatsA, floatsB);
+  }
+
+  @Benchmark
+  public float[] l2Normalize() {
+    return VectorUtil.l2normalize(floatsA, false);
   }
 
   @Benchmark
@@ -105,6 +182,14 @@ public class VectorUtilBenchmark {
       jvmArgsPrepend = {"--add-modules=jdk.incubator.vector"})
   public float floatCosineVector() {
     return VectorUtil.cosine(floatsA, floatsB);
+  }
+
+  @Benchmark
+  @Fork(
+      value = 15,
+      jvmArgsPrepend = {"--add-modules=jdk.incubator.vector"})
+  public float[] l2NormalizeVector() {
+    return VectorUtil.l2normalize(floatsA, false);
   }
 
   @Benchmark
