@@ -16,20 +16,27 @@
  */
 package org.apache.lucene.store;
 
+import static org.apache.lucene.index.IndexFileNames.CODEC_FILE_PATTERN;
+
 import java.io.IOException;
-import java.lang.invoke.MethodHandles;
-import java.lang.invoke.MethodType;
-import java.nio.channels.ClosedChannelException; // javadoc @link
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
+import java.nio.channels.ClosedChannelException;
+import java.nio.channels.FileChannel;
+import java.nio.channels.FileChannel.MapMode;
 import java.nio.file.Path;
-import java.security.AccessController;
-import java.security.PrivilegedAction;
+import java.nio.file.StandardOpenOption;
 import java.util.Locale;
 import java.util.Optional;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.Future;
+import java.util.function.BiFunction;
 import java.util.function.BiPredicate;
+import java.util.function.Function;
 import java.util.logging.Logger;
+import org.apache.lucene.index.IndexFileNames;
 import org.apache.lucene.util.Constants;
-import org.apache.lucene.util.SuppressForbidden;
+import org.apache.lucene.util.Unwrappable;
 
 /**
  * File-based {@link Directory} implementation that uses mmap for reading, and {@link
@@ -40,45 +47,29 @@ import org.apache.lucene.util.SuppressForbidden;
  * plenty of virtual address space, e.g. by using a 64 bit JRE, or a 32 bit JRE with indexes that
  * are guaranteed to fit within the address space. On 32 bit platforms also consult {@link
  * #MMapDirectory(Path, LockFactory, long)} if you have problems with mmap failing because of
- * fragmented address space. If you get an OutOfMemoryException, it is recommended to reduce the
- * chunk size, until it works.
+ * fragmented address space. If you get an {@link IOException} about mapping failed, it is
+ * recommended to reduce the chunk size, until it works.
  *
  * <p>This class supports preloading files into physical memory upon opening. This can help improve
  * performance of searches on a cold page cache at the expense of slowing down opening an index. See
  * {@link #setPreload(BiPredicate)} for more details.
  *
- * <p>Due to <a href="https://bugs.openjdk.org/browse/JDK-4724038">this bug</a> in OpenJDK,
- * MMapDirectory's {@link IndexInput#close} is unable to close the underlying OS file handle. Only
- * when GC finally collects the underlying objects, which could be quite some time later, will the
- * file handle be closed.
+ * <p>This class supports grouping of files that are part of the same logical group. This is a hint
+ * that allows for better handling of resources. For example, individual files that are part of the
+ * same segment can be considered part of the same logical group. See {@link
+ * #setGroupingFunction(Function)} for more details.
  *
- * <p>This will consume additional transient disk usage: on Windows, attempts to delete or overwrite
- * the files will result in an exception; on other platforms, which typically have a &quot;delete on
- * last close&quot; semantics, while such operations will succeed, the bytes are still consuming
- * space on disk. For many applications this limitation is not a problem (e.g. if you have plenty of
- * disk space, and you don't rely on overwriting files on Windows) but it's still an important
- * limitation to be aware of.
+ * <p>This class will use the modern {@link java.lang.foreign.MemorySegment} API available since
+ * Java 21 which allows to safely unmap previously mmapped files after closing the {@link
+ * IndexInput}s. For more information about the foreign memory API read documentation of the {@link
+ * java.lang.foreign} package.
  *
- * <p>This class supplies the workaround mentioned in the bug report, which may fail on
- * non-Oracle/OpenJDK JVMs. It forcefully unmaps the buffer on close by using an undocumented
- * internal cleanup functionality. If {@link #UNMAP_SUPPORTED} is <code>true</code>, the workaround
- * will be automatically enabled (with no guarantees; if you discover any problems, you can disable
- * it by using system property {@link #ENABLE_UNMAP_HACK_SYSPROP}).
- *
- * <p>For the hack to work correct, the following requirements need to be fulfilled: The used JVM
- * must be at least Oracle Java / OpenJDK. In addition, the following permissions need to be granted
- * to {@code lucene-core.jar} in your <a
- * href="http://docs.oracle.com/javase/8/docs/technotes/guides/security/PolicyFiles.html">policy
- * file</a>:
- *
- * <ul>
- *   <li>{@code permission java.lang.reflect.ReflectPermission "suppressAccessChecks";}
- *   <li>{@code permission java.lang.RuntimePermission "accessClassInPackage.sun.misc";}
- * </ul>
- *
- * <p>On exactly <b>Java 19 / 20 / 21</b> this class will use the modern {@code MemorySegment} API
- * which allows to safely unmap (if you discover any problems with this preview API, you can disable
- * it by using system property {@link #ENABLE_MEMORY_SEGMENTS_SYSPROP}).
+ * <p>On some platforms like Linux and macOS, this class will invoke the syscall {@code madvise()}
+ * to advise how OS kernel should handle paging after opening a file. For this to work, Java code
+ * must be able to call native code. If this is not allowed, a warning is logged. To enable native
+ * access for Lucene in a modularized application, pass {@code
+ * --enable-native-access=org.apache.lucene.core} to the Java command line. If Lucene is running in
+ * a classpath-based application, use {@code --enable-native-access=ALL-UNNAMED}.
  *
  * <p><b>NOTE:</b> Accessing this class either directly or indirectly from a thread while it's
  * interrupted can close the underlying channel immediately if at the same time the thread is
@@ -91,31 +82,96 @@ import org.apache.lucene.util.SuppressForbidden;
  * synchronize on the <code>MMapDirectory</code> instance as this may cause deadlock; use your own
  * (non-Lucene) objects instead.
  *
- * @see <a href="http://blog.thetaphi.de/2012/07/use-lucenes-mmapdirectory-on-64bit.html">Blog post
+ * @see <a href="https://blog.thetaphi.de/2012/07/use-lucenes-mmapdirectory-on-64bit.html">Blog post
  *     about MMapDirectory</a>
  */
 public class MMapDirectory extends FSDirectory {
-
-  private static final Logger LOG = Logger.getLogger(MMapDirectory.class.getName());
 
   /**
    * Argument for {@link #setPreload(BiPredicate)} that configures all files to be preloaded upon
    * opening them.
    */
-  public static final BiPredicate<String, IOContext> ALL_FILES = (filename, context) -> true;
+  public static final BiPredicate<String, IOContext> ALL_FILES = (_, _) -> true;
 
   /**
    * Argument for {@link #setPreload(BiPredicate)} that configures no files to be preloaded upon
    * opening them.
    */
-  public static final BiPredicate<String, IOContext> NO_FILES = (filename, context) -> false;
+  public static final BiPredicate<String, IOContext> NO_FILES = (_, _) -> false;
 
   /**
-   * Argument for {@link #setPreload(BiPredicate)} that configures files to be preloaded upon
-   * opening them if they use the {@link IOContext#LOAD} I/O context.
+   * Argument for {@link #setPreload(BiPredicate)} that configures files to be preloaded when they
+   * are hinted to do so.
    */
-  public static final BiPredicate<String, IOContext> BASED_ON_LOAD_IO_CONTEXT =
-      (filename, context) -> context.load;
+  public static final BiPredicate<String, IOContext> PRELOAD_HINT =
+      (_, c) -> c.hints().contains(PreloadHint.INSTANCE);
+
+  /**
+   * This sysprop allows to control the total maximum number of mmapped files that can be associated
+   * with a single shared {@link java.lang.foreign.Arena foreign Arena}. For example, to set the max
+   * number of permits to 256, pass the following on the command line pass {@code
+   * -Dorg.apache.lucene.store.MMapDirectory.sharedArenaMaxPermits=256}. Setting a value of 1
+   * associates one file to one shared arena.
+   *
+   * @lucene.internal
+   */
+  public static final String SHARED_ARENA_MAX_PERMITS_SYSPROP =
+      "org.apache.lucene.store.MMapDirectory.sharedArenaMaxPermits";
+
+  /** Argument for {@link #setGroupingFunction(Function)} that configures no grouping. */
+  public static final Function<String, Optional<String>> NO_GROUPING = _ -> Optional.empty();
+
+  /** Argument for {@link #setGroupingFunction(Function)} that configures grouping by segment. */
+  public static final Function<String, Optional<String>> GROUP_BY_SEGMENT =
+      filename -> {
+        if (!CODEC_FILE_PATTERN.matcher(filename).matches()) {
+          return Optional.empty();
+        }
+        String groupKey = IndexFileNames.parseSegmentName(filename).substring(1);
+        try {
+          // keep the original generation (=0) in base group, later generations in extra group
+          if (IndexFileNames.parseGeneration(filename) > 0) {
+            groupKey += "-g";
+          }
+        } catch (NumberFormatException _) {
+          // does not confirm to the generation syntax, or trash
+        }
+        return Optional.of(groupKey);
+      };
+
+  /**
+   * Argument for {@link #setReadAdvice(BiFunction)} that configures the read advice based on the
+   * context type and hints.
+   *
+   * <p>Specifically, the advice is determined by evaluating the following conditions in order:
+   *
+   * <ol>
+   *   <li>If the context is either of {@link IOContext.Context#MERGE} or {@link
+   *       IOContext.Context#FLUSH}, then {@link ReadAdvice#SEQUENTIAL},
+   *   <li>If the context {@link IOContext#hints() hints} contains {@link DataAccessHint#RANDOM},
+   *       then {@link ReadAdvice#RANDOM},
+   *   <li>If the context {@link IOContext#hints() hints} contains {@link
+   *       DataAccessHint#SEQUENTIAL}, then {@link ReadAdvice#SEQUENTIAL},
+   *   <li>Otherwise, {@link Constants#DEFAULT_READADVICE} is returned.
+   * </ol>
+   */
+  public static final BiFunction<String, IOContext, Optional<ReadAdvice>> ADVISE_BY_CONTEXT =
+      (String _, IOContext context) -> {
+        if (context.context() == IOContext.Context.MERGE
+            || context.context() == IOContext.Context.FLUSH) {
+          return Optional.of(ReadAdvice.SEQUENTIAL);
+        }
+        if (context.hints().contains(DataAccessHint.RANDOM)) {
+          return Optional.of(ReadAdvice.RANDOM);
+        }
+        if (context.hints().contains(DataAccessHint.SEQUENTIAL)) {
+          return Optional.of(ReadAdvice.SEQUENTIAL);
+        }
+        return Optional.of(Constants.DEFAULT_READADVICE);
+      };
+
+  private BiFunction<String, IOContext, Optional<ReadAdvice>> readAdvice =
+      (_, _) -> Optional.empty();
 
   private BiPredicate<String, IOContext> preload = NO_FILES;
 
@@ -123,36 +179,22 @@ public class MMapDirectory extends FSDirectory {
    * Default max chunk size:
    *
    * <ul>
-   *   <li>16 GiBytes for 64 bit <b>Java 19 / 20 / 21</b> JVMs
-   *   <li>1 GiBytes for other 64 bit JVMs
+   *   <li>16 GiBytes for 64 bit JVMs
    *   <li>256 MiBytes for 32 bit JVMs
    * </ul>
    */
-  public static final long DEFAULT_MAX_CHUNK_SIZE;
+  public static final long DEFAULT_MAX_CHUNK_SIZE =
+      Constants.JRE_IS_64BIT ? (1L << 34) : (1L << 28);
 
-  /**
-   * This sysprop allows to control the workaround/hack for unmapping the buffers from address space
-   * after closing {@link IndexInput}. By default it is enabled; set to {@code false} to disable the
-   * unmap hack globally. On command line pass {@code
-   * -Dorg.apache.lucene.store.MMapDirectory.enableUnmapHack=false} to disable.
-   *
-   * @lucene.internal
-   */
-  public static final String ENABLE_UNMAP_HACK_SYSPROP =
-      "org.apache.lucene.store.MMapDirectory.enableUnmapHack";
+  private static final Optional<NativeAccess> NATIVE_ACCESS = NativeAccess.getImplementation();
+  private static final int SHARED_ARENA_PERMITS =
+      checkMaxPermits(getSharedArenaMaxPermitsSysprop());
 
-  /**
-   * This sysprop allows to control if {@code MemorySegment} API should be used on supported Java
-   * versions. By default it is enabled; set to {@code false} to use legacy {@code ByteBuffer}
-   * implementation. On command line pass {@code
-   * -Dorg.apache.lucene.store.MMapDirectory.enableMemorySegments=false} to disable.
-   *
-   * @lucene.internal
-   */
-  public static final String ENABLE_MEMORY_SEGMENTS_SYSPROP =
-      "org.apache.lucene.store.MMapDirectory.enableMemorySegments";
+  private Function<String, Optional<String>> groupingFunction = GROUP_BY_SEGMENT;
 
   final int chunkSizePower;
+
+  final ConcurrentHashMap<String, RefCountedSharedArena> arenas = new ConcurrentHashMap<>();
 
   /**
    * Create a new MMapDirectory for the named location. The directory is created at the named
@@ -198,9 +240,9 @@ public class MMapDirectory extends FSDirectory {
    * files cannot be mapped. Using a lower chunk size makes the directory implementation a little
    * bit slower (as the correct chunk may be resolved on lots of seeks) but the chance is higher
    * that mmap does not fail. On 64 bit Java platforms, this parameter should always be large (like
-   * 1 GiBytes, or even larger with recent Java versions), as the address space is big enough. If it
-   * is larger, fragmentation of address space increases, but number of file handles and mappings is
-   * lower for huge installations with many open indexes.
+   * 16 GiBytes), as the address space is big enough. If it is larger, fragmentation of address
+   * space increases, but number of file handles and mappings is lower for huge installations with
+   * many open indexes.
    *
    * <p><b>Please note:</b> The chunk size is always rounded down to a power of 2.
    *
@@ -228,10 +270,39 @@ public class MMapDirectory extends FSDirectory {
    * @param preload a {@link BiPredicate} whose first argument is the file name, and second argument
    *     is the {@link IOContext} used to open the file
    * @see #ALL_FILES
+   * @see #PRELOAD_HINT
    * @see #NO_FILES
    */
   public void setPreload(BiPredicate<String, IOContext> preload) {
     this.preload = preload;
+  }
+
+  /**
+   * Configure {@link ReadAdvice} for certain files. The default implementation uses the {@link
+   * Constants#DEFAULT_READADVICE}.
+   *
+   * @param toReadAdvice a {@link Function} whose first argument is the file name, and second
+   *     argument is the {@link IOContext} used to open the file. Returns {@code
+   *     Optional.of(ReadAdvice)} to use a specific read advice, or {@code Optional.empty()} if a
+   *     default should be used
+   */
+  public void setReadAdvice(BiFunction<String, IOContext, Optional<ReadAdvice>> toReadAdvice) {
+    this.readAdvice = toReadAdvice;
+  }
+
+  /**
+   * Configures a grouping function for files that are part of the same logical group. The gathering
+   * of files into a logical group is a hint that allows for better handling of resources.
+   *
+   * <p>By default, grouping is {@link #GROUP_BY_SEGMENT}. To disable, invoke this method with
+   * {@link #NO_GROUPING}.
+   *
+   * @param groupingFunction a function that accepts a file name and returns an optional group key.
+   *     If the optional is present, then its value is the logical group to which the file belongs.
+   *     Otherwise, the file name if not associated with any logical group.
+   */
+  public void setGroupingFunction(Function<String, Optional<String>> groupingFunction) {
+    this.groupingFunction = groupingFunction;
   }
 
   /**
@@ -249,134 +320,193 @@ public class MMapDirectory extends FSDirectory {
     ensureOpen();
     ensureCanRead(name);
     Path path = directory.resolve(name);
-    return PROVIDER.openInput(path, context, chunkSizePower, preload.test(name, context));
+    final String resourceDescription = "MemorySegmentIndexInput(path=\"" + path.toString() + "\")";
+
+    // Work around for JDK-8259028: we need to unwrap our test-only file system layers
+    path = Unwrappable.unwrapAll(path);
+
+    final boolean confined = context.hints().contains(ReadOnceHint.INSTANCE);
+    Function<IOContext, ReadAdvice> toReadAdvice =
+        c -> readAdvice.apply(name, c).orElse(Constants.DEFAULT_READADVICE);
+    final Arena arena = confined ? Arena.ofConfined() : getSharedArena(name, arenas);
+    try (var fc = FileChannel.open(path, StandardOpenOption.READ)) {
+      final long fileSize = fc.size();
+      return MemorySegmentIndexInput.newInstance(
+          resourceDescription,
+          arena,
+          map(
+              arena,
+              resourceDescription,
+              fc,
+              toReadAdvice.apply(context),
+              chunkSizePower,
+              preload.test(name, context),
+              fileSize),
+          fileSize,
+          chunkSizePower,
+          confined,
+          toReadAdvice);
+    } catch (Throwable t) {
+      arena.close();
+      throw t;
+    }
   }
 
-  // visible for tests:
-  static final MMapIndexInputProvider PROVIDER;
+  private final MemorySegment[] map(
+      Arena arena,
+      String resourceDescription,
+      FileChannel fc,
+      ReadAdvice readAdvice,
+      int chunkSizePower,
+      boolean preload,
+      long length)
+      throws IOException {
+    if ((length >>> chunkSizePower) >= Integer.MAX_VALUE)
+      throw new IllegalArgumentException("File too big for chunk size: " + resourceDescription);
 
-  /** <code>true</code>, if this platform supports unmapping mmapped files. */
-  public static final boolean UNMAP_SUPPORTED;
+    final long chunkSize = 1L << chunkSizePower;
+
+    // we always allocate one more segments, the last one may be a 0 byte one
+    final int nrSegments = (int) (length >>> chunkSizePower) + 1;
+
+    final MemorySegment[] segments = new MemorySegment[nrSegments];
+
+    long startOffset = 0L;
+    for (int segNr = 0; segNr < nrSegments; segNr++) {
+      final long segSize =
+          (length > (startOffset + chunkSize)) ? chunkSize : (length - startOffset);
+      final MemorySegment segment;
+      try {
+        segment = fc.map(MapMode.READ_ONLY, startOffset, segSize, arena);
+      } catch (IOException ioe) {
+        throw convertMapFailedIOException(ioe, resourceDescription, segSize);
+      }
+      // if preload apply it without madvise.
+      // skip madvise if the address of our segment is not page-aligned (small segments due to
+      // internal FileChannel logic)
+      if (preload) {
+        segment.load();
+      } else if (readAdvice != ReadAdvice.NORMAL
+          && NATIVE_ACCESS.filter(na -> segment.address() % na.getPageSize() == 0).isPresent()) {
+        // No need to madvise with ReadAdvice.NORMAL since it is the OS' default read advice.
+        NATIVE_ACCESS.get().madvise(segment, readAdvice);
+      }
+      segments[segNr] = segment;
+      startOffset += segSize;
+    }
+    return segments;
+  }
 
   /**
-   * if {@link #UNMAP_SUPPORTED} is {@code false}, this contains the reason why unmapping is not
-   * supported.
+   * Gets an arena for the given filename, potentially aggregating files from the same segment into
+   * a single ref counted shared arena. A ref counted shared arena, if created will be added to the
+   * given arenas map.
    */
-  public static final String UNMAP_NOT_SUPPORTED_REASON;
+  private Arena getSharedArena(
+      String name, ConcurrentHashMap<String, RefCountedSharedArena> arenas) {
+    final var group = groupingFunction.apply(name);
 
-  interface MMapIndexInputProvider {
-    IndexInput openInput(Path path, IOContext context, int chunkSizePower, boolean preload)
-        throws IOException;
+    if (group.isEmpty()) {
+      return Arena.ofShared();
+    }
 
-    long getDefaultMaxChunkSize();
-
-    boolean isUnmapSupported();
-
-    String getUnmapNotSupportedReason();
-
-    default IOException convertMapFailedIOException(
-        IOException ioe, String resourceDescription, long bufSize) {
-      final String originalMessage;
-      final Throwable originalCause;
-      if (ioe.getCause() instanceof OutOfMemoryError) {
-        // nested OOM confuses users, because it's "incorrect", just print a plain message:
-        originalMessage = "Map failed";
-        originalCause = null;
-      } else {
-        originalMessage = ioe.getMessage();
-        originalCause = ioe.getCause();
-      }
-      final String moreInfo;
-      if (!Constants.JRE_IS_64BIT) {
-        moreInfo =
-            "MMapDirectory should only be used on 64bit platforms, because the address space on 32bit operating systems is too small. ";
-      } else if (Constants.WINDOWS) {
-        moreInfo =
-            "Windows is unfortunately very limited on virtual address space. If your index size is several hundred Gigabytes, consider changing to Linux. ";
-      } else if (Constants.LINUX) {
-        moreInfo =
-            "Please review 'ulimit -v', 'ulimit -m' (both should return 'unlimited'), and 'sysctl vm.max_map_count'. ";
-      } else {
-        moreInfo = "Please review 'ulimit -v', 'ulimit -m' (both should return 'unlimited'). ";
-      }
-      final IOException newIoe =
-          new IOException(
-              String.format(
-                  Locale.ENGLISH,
-                  "%s: %s [this may be caused by lack of enough unfragmented virtual address space "
-                      + "or too restrictive virtual memory limits enforced by the operating system, "
-                      + "preventing us to map a chunk of %d bytes. %sMore information: "
-                      + "https://blog.thetaphi.de/2012/07/use-lucenes-mmapdirectory-on-64bit.html]",
-                  originalMessage,
-                  resourceDescription,
-                  bufSize,
-                  moreInfo),
-              originalCause);
-      newIoe.setStackTrace(ioe.getStackTrace());
-      return newIoe;
+    String key = group.get();
+    var refCountedArena =
+        arenas.computeIfAbsent(
+            key, s -> new RefCountedSharedArena(s, () -> arenas.remove(s), SHARED_ARENA_PERMITS));
+    if (refCountedArena.acquire()) {
+      return refCountedArena;
+    } else {
+      return arenas.compute(
+          key,
+          (s, v) -> {
+            if (v != null && v.acquire()) {
+              return v;
+            } else {
+              v = new RefCountedSharedArena(s, () -> arenas.remove(s), SHARED_ARENA_PERMITS);
+              v.acquire(); // guaranteed to succeed
+              return v;
+            }
+          });
     }
   }
 
-  // Extracted to a method to be able to apply the SuppressForbidden annotation
-  @SuppressWarnings("removal")
-  @SuppressForbidden(reason = "security manager")
-  private static <T> T doPrivileged(PrivilegedAction<T> action) {
-    return AccessController.doPrivileged(action);
+  private static IOException convertMapFailedIOException(
+      IOException ioe, String resourceDescription, long bufSize) {
+    final String originalMessage;
+    final Throwable originalCause;
+    if (ioe.getCause() instanceof OutOfMemoryError) {
+      // nested OOM confuses users, because it's "incorrect", just print a plain message:
+      originalMessage = "Map failed";
+      originalCause = null;
+    } else {
+      originalMessage = ioe.getMessage();
+      originalCause = ioe.getCause();
+    }
+    final String moreInfo;
+    if (!Constants.JRE_IS_64BIT) {
+      moreInfo =
+          "MMapDirectory should only be used on 64bit platforms, because the address space on 32bit operating systems is too small. ";
+    } else if (Constants.WINDOWS) {
+      moreInfo =
+          "Windows is unfortunately very limited on virtual address space. If your index size is several hundred Gigabytes, consider changing to Linux. ";
+    } else if (Constants.LINUX) {
+      moreInfo =
+          "Please review 'ulimit -v', 'ulimit -m' (both should return 'unlimited'), and 'sysctl vm.max_map_count'. ";
+    } else {
+      moreInfo = "Please review 'ulimit -v', 'ulimit -m' (both should return 'unlimited'). ";
+    }
+    final IOException newIoe =
+        new IOException(
+            String.format(
+                Locale.ENGLISH,
+                "%s: %s [this may be caused by lack of enough unfragmented virtual address space "
+                    + "or too restrictive virtual memory limits enforced by the operating system, "
+                    + "preventing us to map a chunk of %d bytes. %sMore information: "
+                    + "https://blog.thetaphi.de/2012/07/use-lucenes-mmapdirectory-on-64bit.html]",
+                originalMessage,
+                resourceDescription,
+                bufSize,
+                moreInfo),
+            originalCause);
+    newIoe.setStackTrace(ioe.getStackTrace());
+    return newIoe;
   }
 
-  private static boolean checkMemorySegmentsSysprop() {
+  private static int checkMaxPermits(int maxPermits) {
+    if (RefCountedSharedArena.validMaxPermits(maxPermits)) {
+      return maxPermits;
+    }
+    Logger.getLogger(MMapDirectory.class.getName())
+        .warning(
+            "Invalid value for sysprop "
+                + MMapDirectory.SHARED_ARENA_MAX_PERMITS_SYSPROP
+                + ", must be positive and <= 0x07FF. The default value will be used.");
+    return RefCountedSharedArena.DEFAULT_MAX_PERMITS;
+  }
+
+  private static int getSharedArenaMaxPermitsSysprop() {
+    int ret = 1024; // default value
     try {
-      return Optional.ofNullable(System.getProperty(ENABLE_MEMORY_SEGMENTS_SYSPROP))
-          .map(Boolean::valueOf)
-          .orElse(Boolean.TRUE);
-    } catch (
-        @SuppressWarnings("unused")
-        SecurityException ignored) {
-      LOG.warning(
-          "Cannot read sysprop "
-              + ENABLE_MEMORY_SEGMENTS_SYSPROP
-              + ", so MemorySegments will be enabled by default, if possible.");
-      return true;
-    }
-  }
-
-  private static MMapIndexInputProvider lookupProvider() {
-    if (checkMemorySegmentsSysprop() == false) {
-      return new MappedByteBufferIndexInputProvider();
-    }
-    final var lookup = MethodHandles.lookup();
-    final int runtimeVersion = Runtime.version().feature();
-    if (runtimeVersion >= 19 && runtimeVersion <= 21) {
-      try {
-        final var cls = lookup.findClass("org.apache.lucene.store.MemorySegmentIndexInputProvider");
-        // we use method handles, so we do not need to deal with setAccessible as we have private
-        // access through the lookup:
-        final var constr = lookup.findConstructor(cls, MethodType.methodType(void.class));
-        try {
-          return (MMapIndexInputProvider) constr.invoke();
-        } catch (RuntimeException | Error e) {
-          throw e;
-        } catch (Throwable th) {
-          throw new AssertionError(th);
-        }
-      } catch (NoSuchMethodException | IllegalAccessException e) {
-        throw new LinkageError(
-            "MemorySegmentIndexInputProvider is missing correctly typed constructor", e);
-      } catch (ClassNotFoundException cnfe) {
-        throw new LinkageError(
-            "MemorySegmentIndexInputProvider is missing in Lucene JAR file", cnfe);
+      String str = System.getProperty(SHARED_ARENA_MAX_PERMITS_SYSPROP);
+      if (str != null) {
+        ret = Integer.parseInt(str);
       }
-    } else if (runtimeVersion >= 22) {
-      LOG.warning(
-          "You are running with Java 22 or later. To make full use of MMapDirectory, please update Apache Lucene.");
+    } catch (NumberFormatException | SecurityException _) {
+      Logger.getLogger(MMapDirectory.class.getName())
+          .warning(
+              "Cannot read sysprop "
+                  + SHARED_ARENA_MAX_PERMITS_SYSPROP
+                  + ", so the default value will be used.");
     }
-    return new MappedByteBufferIndexInputProvider();
+    return ret;
   }
 
-  static {
-    PROVIDER = doPrivileged(MMapDirectory::lookupProvider);
-    DEFAULT_MAX_CHUNK_SIZE = PROVIDER.getDefaultMaxChunkSize();
-    UNMAP_SUPPORTED = PROVIDER.isUnmapSupported();
-    UNMAP_NOT_SUPPORTED_REASON = PROVIDER.getUnmapNotSupportedReason();
+  /**
+   * Returns true, if MMapDirectory uses the platform's {@code madvise()} syscall to advise how OS
+   * kernel should handle paging after opening a file.
+   */
+  public static boolean supportsMadvise() {
+    return NATIVE_ACCESS.isPresent();
   }
 }
